# bekci

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
bekci/: __init__.py  plugin.py
bekci/rules/: __init__.py  bek001_keyword_arguments.py
tests/: test_bek001.py
